src/snapshots/afrotd__parser__tests__interpretation_html_3.3.1_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.1.I
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 2 von der B-15. A45 fumbelt einen Live Ball nachdem er drei
            Meter advanct ist. Die Schiedsrichter können nicht herausfinden,
            wer den Ball recovert hat, deshalb hält der Line Judge die Game
            Clock an, während im gleichen Augenblick erkannt wird, wer den Ball
            recovert hatte. A45 hatte den Ball recovert und (a) die Line to
            Gain nicht erreicht oder (b) die Line to Gain erreicht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der 40-SekundenCountdown beginnt, wenn der Ball für dead
                erklärt wird. (a) Der Referee zeigt sofort an, dass die Game
                Clock gestartet werden soll. (b) Die Game Clock startet mit dem
                Signal des Referees, wenn der Ball spielbereit ist.
            </p>
        </details>
    </div>
</article>
