src/snapshots/afrotd__parser__tests__interpretation_html_3.3.1_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.1.V
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-30. Zu einem späten Zeitpunkt in der Halbzeit
            haben beide Teams ihre Team-Timeouts noch verfügbar. Während Team A
            sich an der Scrimmage Line befindet und bereit ist, den Snap
            durchzuführen, verlangt Team B’s Head Coach ein Timeout und dem
            Verlangen wird stattgegeben. Nach dem Timeout sind beide Teams in
            Position und der Ball ist spielbereit. (a) Team B’s Head Coach
            verlangt ein Timeout oder (b) Team A’s Head Coach verlangt ein
            Timeout.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Die Schiedsrichter sollen Team B’s Timeout-Verlangen
                ignorieren. Team B hat zwar noch zwei Timeouts, aber sie haben
                in dieser Dead Ball Periode bereits ein Timeout genommen, so
                dass ein weiteres Timeout nicht zugelassen wird. (b) Team A’s
                Verlangen nach einem Timeout wird stattgegeben. Da Team A in
                dieser Halbzeit noch Timeouts zur Verfügung hat und in dieser
                Dead Ball Periode noch kein Timeout genommen hat, wird ein
                Timeout zugelassen.
            </p>
        </details>
    </div>
</article>
