src/snapshots/afrotd__parser__tests__interpretation_html_3.3.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 4. Team A’s Pass wird durch B1 abgefangen und B1 wird im
            Spielfeld zu Boden gebracht. B2 war während des Spieles Offside.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball. First Down und 10. Die Game Clock startet beim
                Signal des Referees. Obwohl die Game Clock angehalten wurde, um
                Team B ein First Down zuzuerkennen, führt Team B nicht den
                nächsten Snap durch.
            </p>
        </details>
    </div>
</article>
