src/snapshots/afrotd__parser__tests__interpretation_html_3.3.2_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.2.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Zu einem späten Zeitpunkt in der zweiten oder vierten Spielperiode
            geht der Ballträger während eines Downs ins Aus. Die Game Clock
            wird angehalten, a) vor dem Zwei-Minuten-Timeout; b) bei oder nach
            dem Zwei-Minuten-Timeout.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Game Clock startet (a) beim Signal des Referees; (b) mit
                dem Snap.
            </p>
        </details>
    </div>
</article>
