src/snapshots/afrotd__parser__tests__interpretation_html_3.3.2_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.2.V
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 8 in der zweiten oder der vierten Spielperiode. B44 fängt
            einen legalen Vorwärtspass ab und trägt den Ball ins Aus. B79
            befand sich beim Snap in der neutralen Zone. Die Game Clock wird
            angehalten, a) vor dem Zwei-Minuten-Timeout; b) für das
            Zwei-Minuten-Timeout.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A nimmt die Strafe an und bleibt in Ballbesitz. In a)
                startet die Game Clock mit dem Signal des Referees, denn Team B
                führt nicht den nächsten Snap durch. In b) startet die Game
                Clock mit dem Snap nach dem Zwei-Minuten-Timeout.
            </p>
        </details>
    </div>
</article>
