src/snapshots/afrotd__parser__tests__interpretation_html_3.3.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 8 von der A-12 spät in der vierten Spielperiode. Der Punt
            wird geblockt und der Ball überquert nicht die neutrale Zone. An
            der A10 recovert Back A22 den Ball und wirft einen Vorwärtspass auf
            den berechtigten A88, der an der B-3 getackelt wird. Die Game Clock
            steht bei 0:03.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball an der B-3, 1. und Goal. Die Game Clock startet
                wegen des legalen Kicks mit dem Snap (Regeln 3.3.2.d.8,
                3.3.2.e.1, 3.3.2.f).
            </p>
        </details>
    </div>
</article>
